--- a/src/ansible/roles/uni/get/defaults/main.yml
+++ b/src/ansible/roles/uni/get/defaults/main.yml
@@ -1,3 +1,6 @@
 local_mirror: "{{ lookup('ansible.builtin.env', 'HOME') }}/.uni/mirror"
 
 ava_dir: "{{ lookup('ansible.builtin.env', 'HOME') }}/.uni/ava"
+
+# Set in Dependent Roles
+get_cpu_info: false
